ADDING: indicator js

--- a/framework/styles/css/app.css
+++ b/framework/styles/css/app.css
@@ -1224,6 +1224,7 @@ textarea {
   color: #2990ea; }
   .link--tab {
     display: block;
+    position: relative;
     height: 53px;
     padding: 0 5px;
     color: rgba(0, 0, 0, 0.45);
@@ -1235,10 +1236,9 @@ textarea {
         padding: 0 20px;
         font-size: 16px; } }
     .link--tab:hover {
-      color: rgba(0, 0, 0, 0.3); }
+      color: #b7bbbd; }
     .link--tab.active {
-      color: #2990ea;
-      border-bottom: 2px solid; }
+      color: #2990ea; }
   .link--header {
     display: block;
     padding: 7px 14px;
@@ -1265,7 +1265,7 @@ textarea {
 /*------------------------- */
 .tabs {
   height: 55px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 2px solid #d4d5d6;
   background-color: rgba(255, 255, 255, 0.98);
   line-height: 57px;
   text-align: center; }
@@ -1301,7 +1301,21 @@ textarea {
         display: inline-block;
         width: auto;
         float: none; } }
-
+    .tabs .tab--indicator {
+      position: absolute;
+      bottom: -2px;
+      right: 0;
+      left: 0;
+      height: 2px;
+      background-color: #2990ea;
+      -o-transition: transform 250ms;
+      transition: transform 250ms; }
+      @media screen and (-webkit-min-device-pixel-ratio: 0) {
+        .tabs .tab--indicator {
+          -webkit-transition: transform 250ms; } }
+@-moz-document url-prefix() {
+  .tabs .tab--indicator {
+    -moz-transition: transform 250ms; } }
 /*-------------------------*\
  * BUTTONS */
 /*------------------------- */
