--- a/framework/styles/sass/_colors.sass
+++ b/framework/styles/sass/_colors.sass
@@ -41,8 +41,17 @@ $blue: rgb(41,144,234)
 $blue--dark: rgb(38,129,209)
 $blue--darker: rgb(24,82,133)
 
+$green--light: rgb(162,224,163)
+$green: rgb(70,193,72)
+$green--dark: rgb(61,168,62)
+
 $orange: rgb(255, 143, 46)
 $orange--light: rgb(255, 233, 213)
+
+$red--lighter: rgb(255,242,242)
+$red--light: rgb(255,122,122)
+$red: rgb(225,58,58)
+$red--dark: rgb(199,52,52)
 
 // SOCIAL COLORS
 $facebook: rgb(57, 87, 157)
