--- a/framework/styles/sass/_navigation.sass
+++ b/framework/styles/sass/_navigation.sass
@@ -36,7 +36,7 @@
     position: relative
     height: $tab-height - $tab-modifier
     padding: 0 5px
-    color: $b-45
+    color: $gray
     font-size: 11px
     font-weight: $bold
     text-transform: uppercase
@@ -60,7 +60,7 @@
 
   &--sub
     padding: 7px 14px
-    color: $b-45
+    color: $gray
     font-size: 16px
     font-weight: $bold
 
