--- a/framework/styles/sass/_buttons.sass
+++ b/framework/styles/sass/_buttons.sass
@@ -8,7 +8,7 @@ button,
   border: 2px solid
   +border-radius(35px)
   background: none
-  color: $b-80
+  color: $gray--darker
   font-size: 18px
   line-height: 1.5
   letter-spacing: 0.25px
@@ -76,20 +76,6 @@ button,
     &--borderless
       border: none
       color: $blue
-
-  &.modal
-    &__button
-      width: 100%
-      padding: 8px 0 7px
-      +border-radius(0)
-      border-top: 1px solid $gray--lighter
-      border-right: none
-      border-bottom: 1px solid $gray--lighter
-      border-left: none
-      background-color: $w
-
-      &--action
-      &--action--delete
 
   /*-------------------------*\
    * BUTTON ICON
