--- a/framework/styles/sass/_colors.sass
+++ b/framework/styles/sass/_colors.sass
@@ -28,12 +28,12 @@ $w-98: rgba(255, 255, 255, 0.98)
 $w: rgb(255, 255, 255)
 
 // UI
-$gray--lightest: rgb(248,248,248)
-$gray--lighter: rgb(212,213,214)
-$gray--light: rgb(183,187,189)
-$gray: rgb(155,160,163)
-$gray--dark: rgb(102,108,112)
-$gray--darker: rgb(54,59,62)
+$gray--lightest: rgb(248,248,248) // #f8f8f8
+$gray--lighter: rgb(212,213,214) // #d4d5d6
+$gray--light: rgb(183,187,189) // #b7bbbd
+$gray: rgb(155,160,163) // #9ba0a3
+$gray--dark: rgb(102,108,112) // #666c70
+$gray--darker: rgb(54,59,62) // # 363b3e
 
 $blue--lighter: rgb(246,251,255)
 $blue--light: rgb(122,193,255)
