--- a/framework/styles/sass/_fonts.sass
+++ b/framework/styles/sass/_fonts.sass
@@ -22,9 +22,7 @@
   src: url("https://cdn2.editmysite.com/fonts/wIcons/wicons.eot?buildTime=1426530185#iefix") format("embedded-opentype"), url("https://cdn2.editmysite.com/fonts/wIcons/wicons.woff?buildTime=1426530185") format("woff"), url("https://cdn2.editmysite.com/fonts/wIcons/wicons.ttf?buildTime=1426530185") format("truetype"), url("https://cdn2.editmysite.com/fonts/wIcons/wicons.svg?buildTime=1426530185#wicons") format("svg")
   font-weight: normal
   font-style: normal
-
-  // Hack to smooth out font rendering on Chrome for Windows
-  @media screen and (-webkit-min-device-pixel-ratio: 0)
+  +webkit
     font-family: 'wicons'
     src: url("https://cdn2.editmysite.com/fonts/wIcons/wicons.svg?buildTime=1426530185#wicons") format("svg")
 
@@ -35,9 +33,7 @@
   src: url("https://cdn2.editmysite.com/fonts/wSocial/wsocial.eot?buildTime=1426530185#iefix") format("embedded-opentype"), url("https://cdn2.editmysite.com/fonts/wSocial/wsocial.woff?buildTime=1426530185") format("woff"), url("https://cdn2.editmysite.com/fonts/wSocial/wsocial.ttf?buildTime=1426530185") format("truetype"), url("https://cdn2.editmysite.com/fonts/wSocial/wsocial.svg?buildTime=1426530185#wsocial") format("svg")
   font-weight: normal
   font-style: normal
-
-  // Hack to smooth out font rendering on Chrome for Windows
-  @media screen and (-webkit-min-device-pixel-ratio: 0)
+  +webkit
     font-family: 'wsocial'
     src: url("https://cdn2.editmysite.com/fonts/wSocial/wsocial.svg?buildTime=1426530185#wsocial") format("svg")
 
