--- a/framework/styles/css/app.css
+++ b/framework/styles/css/app.css
@@ -1903,8 +1903,8 @@ button,
   opacity: 0;
   visibility: hidden;
   z-index: 9;
-  -o-transition: opacity 233ms, visibility 233ms;
-  transition: opacity 233ms, visibility 233ms; }
+  -o-transition: opacity 610ms, visibility 610ms;
+  transition: opacity 610ms, visibility 610ms; }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__bg {
       -webkit-backface-visibility: hidden; } }
@@ -1913,10 +1913,10 @@ button,
     -moz-backface-visibility: hidden; } }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__bg {
-      -webkit-transition: opacity 233ms, visibility 233ms; } }
+      -webkit-transition: opacity 610ms, visibility 610ms; } }
 @-moz-document url-prefix() {
   .modal__bg {
-    -moz-transition: opacity 233ms, visibility 233ms; } }
+    -moz-transition: opacity 610ms, visibility 610ms; } }
   .modal__bg.active {
     opacity: 1;
     visibility: visible;
@@ -1926,25 +1926,25 @@ button,
   top: 50%;
   left: 50%;
   width: 620px;
-  height: 490px;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   background-color: #f8f8f8;
   backface-visibility: hidden;
   opacity: 0;
   visibility: hidden;
   overflow: hidden;
   z-index: 10;
-  -ms-transform: translate(-50%, -48%);
-  -o-transform: translate(-50%, -48%);
-  transform: translate(-50%, -48%);
+  -ms-transform: translate(-50%, -40%);
+  -o-transform: translate(-50%, -40%);
+  transform: translate(-50%, -40%);
   -o-transition: opacity 233ms, transform 233ms, visibility 233ms;
   transition: opacity 233ms, transform 233ms, visibility 233ms; }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__container {
-      -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 0 10px rgba(0, 0, 0, 0.1); } }
+      -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); } }
 @-moz-document url-prefix() {
   .modal__container {
-    -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 0 10px rgba(0, 0, 0, 0.1); } }
+    -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); } }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__container {
       -webkit-backface-visibility: hidden; } }
@@ -1953,16 +1953,26 @@ button,
     -moz-backface-visibility: hidden; } }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__container {
-      -webkit-transform: translate(-50%, -48%); } }
+      -webkit-transform: translate(-50%, -40%); } }
 @-moz-document url-prefix() {
   .modal__container {
-    -moz-transform: translate(-50%, -48%); } }
+    -moz-transform: translate(-50%, -40%); } }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__container {
       -webkit-transition: opacity 233ms, transform 233ms, visibility 233ms; } }
 @-moz-document url-prefix() {
   .modal__container {
     -moz-transition: opacity 233ms, transform 233ms, visibility 233ms; } }
+  .modal__container:first-of-type {
+    -ms-transform: translate(-50%, -48%);
+    -o-transform: translate(-50%, -48%);
+    transform: translate(-50%, -48%); }
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+      .modal__container:first-of-type {
+        -webkit-transform: translate(-50%, -48%); } }
+@-moz-document url-prefix() {
+  .modal__container:first-of-type {
+    -moz-transform: translate(-50%, -48%); } }
   .modal__container:before {
     content: "";
     position: absolute;
@@ -2020,14 +2030,14 @@ button,
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
-    -o-transition: transform 750ms cubic-bezier(0, 1, 0, 1);
-    transition: transform 750ms cubic-bezier(0, 1, 0, 1); }
+    -o-transition: transform 750ms cubic-bezier(0, 0.8, 0, 1);
+    transition: transform 750ms cubic-bezier(0, 0.8, 0, 1); }
     @media screen and (-webkit-min-device-pixel-ratio: 0) {
       .modal__header .title {
-        -webkit-transition: transform 750ms cubic-bezier(0, 1, 0, 1); } }
+        -webkit-transition: transform 750ms cubic-bezier(0, 0.8, 0, 1); } }
 @-moz-document url-prefix() {
   .modal__header .title {
-    -moz-transition: transform 750ms cubic-bezier(0, 1, 0, 1); } }
+    -moz-transition: transform 750ms cubic-bezier(0, 0.8, 0, 1); } }
     .modal__header .title.passive {
       -ms-transform: translateX(-40%);
       -o-transform: translateX(-40%);
