--- a/framework/styles/css/app.css
+++ b/framework/styles/css/app.css
@@ -1308,14 +1308,14 @@ textarea {
       left: 0;
       height: 2px;
       background-color: #2990ea;
-      -o-transition: transform 233ms cubic-bezier(0.55, 1, 0.55, 1);
-      transition: transform 233ms cubic-bezier(0.55, 1, 0.55, 1); }
+      -o-transition: transform 233ms;
+      transition: transform 233ms; }
       @media screen and (-webkit-min-device-pixel-ratio: 0) {
         .tabs .tab--indicator {
-          -webkit-transition: transform 233ms cubic-bezier(0.55, 1, 0.55, 1); } }
+          -webkit-transition: transform 233ms; } }
 @-moz-document url-prefix() {
   .tabs .tab--indicator {
-    -moz-transition: transform 233ms cubic-bezier(0.55, 1, 0.55, 1); } }
+    -moz-transition: transform 233ms; } }
 /*-------------------------*\
  * BUTTONS */
 /*------------------------- */
@@ -1937,8 +1937,8 @@ button,
   -ms-transform: translate(-50%, -40%);
   -o-transform: translate(-50%, -40%);
   transform: translate(-50%, -40%);
-  -o-transition: opacity 233ms, transform 233ms, visibility 233ms;
-  transition: opacity 233ms, transform 233ms, visibility 233ms; }
+  -o-transition: opacity 233ms, transform 610ms cubic-bezier(0, 0.8, 0, 1), visibility 233ms;
+  transition: opacity 233ms, transform 610ms cubic-bezier(0, 0.8, 0, 1), visibility 233ms; }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__container {
       -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); } }
@@ -1959,10 +1959,10 @@ button,
     -moz-transform: translate(-50%, -40%); } }
   @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .modal__container {
-      -webkit-transition: opacity 233ms, transform 233ms, visibility 233ms; } }
+      -webkit-transition: opacity 233ms, transform 610ms cubic-bezier(0, 0.8, 0, 1), visibility 233ms; } }
 @-moz-document url-prefix() {
   .modal__container {
-    -moz-transition: opacity 233ms, transform 233ms, visibility 233ms; } }
+    -moz-transition: opacity 233ms, transform 610ms cubic-bezier(0, 0.8, 0, 1), visibility 233ms; } }
   .modal__container:first-of-type {
     -ms-transform: translate(-50%, -48%);
     -o-transform: translate(-50%, -48%);
@@ -2038,35 +2038,35 @@ button,
 @-moz-document url-prefix() {
   .modal__header .title {
     -moz-transition: transform 750ms cubic-bezier(0, 0.8, 0, 1); } }
-    .modal__header .title.passive {
-      -ms-transform: translateX(-40%);
-      -o-transform: translateX(-40%);
-      transform: translateX(-40%); }
-      @media screen and (-webkit-min-device-pixel-ratio: 0) {
-        .modal__header .title.passive {
-          -webkit-transform: translateX(-40%); } }
+  .modal__header[data-moda-name='single'] .title.passive {
+    -ms-transform: translateX(-40%);
+    -o-transform: translateX(-40%);
+    transform: translateX(-40%); }
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+      .modal__header[data-moda-name='single'] .title.passive {
+        -webkit-transform: translateX(-40%); } }
 @-moz-document url-prefix() {
-  .modal__header .title.passive {
+  .modal__header[data-moda-name='single'] .title.passive {
     -moz-transform: translateX(-40%); } }
-    .modal__header .title.active {
-      -ms-transform: translateX(0);
-      -o-transform: translateX(0);
-      transform: translateX(0); }
-      @media screen and (-webkit-min-device-pixel-ratio: 0) {
-        .modal__header .title.active {
-          -webkit-transform: translateX(0); } }
+  .modal__header[data-moda-name='single'] .title.active {
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0); }
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+      .modal__header[data-moda-name='single'] .title.active {
+        -webkit-transform: translateX(0); } }
 @-moz-document url-prefix() {
-  .modal__header .title.active {
+  .modal__header[data-moda-name='single'] .title.active {
     -moz-transform: translateX(0); } }
-    .modal__header .title.inactive {
-      -ms-transform: translateX(40%);
-      -o-transform: translateX(40%);
-      transform: translateX(40%); }
-      @media screen and (-webkit-min-device-pixel-ratio: 0) {
-        .modal__header .title.inactive {
-          -webkit-transform: translateX(40%); } }
+  .modal__header[data-moda-name='single'] .title.inactive {
+    -ms-transform: translateX(40%);
+    -o-transform: translateX(40%);
+    transform: translateX(40%); }
+    @media screen and (-webkit-min-device-pixel-ratio: 0) {
+      .modal__header[data-moda-name='single'] .title.inactive {
+        -webkit-transform: translateX(40%); } }
 @-moz-document url-prefix() {
-  .modal__header .title.inactive {
+  .modal__header[data-moda-name='single'] .title.inactive {
     -moz-transform: translateX(40%); } }
   .modal__header button {
     padding: 14px 20px; }
