--- a/framework/styles/sass/_tabs.sass
+++ b/framework/styles/sass/_tabs.sass
@@ -30,4 +30,4 @@
       left: 0
       height: $tab-modifier
       background-color: $blue
-      +transition(transform 233ms cubic-bezier(0.55, 1, 0.55, 1))
+      +transition(transform 233ms)
