--- a/framework/styles/sass/_buttons.sass
+++ b/framework/styles/sass/_buttons.sass
@@ -31,47 +31,47 @@ button,
     &--fill
       border: none
       background-color: $w
-      color: $b-80
+      color: $gray--darker
 
   &.gray
-    border-color: $b-20
+    border-color: $gray--lighter
     color: $gray
 
     &:hover
-      border-color: $b-40
+      border-color: $gray
 
     &--borderless
       border: none
       color: $gray
 
   &.gray--light
-    border-color: $b-20
+    border-color: $gray--lighter
     color: $gray--light
 
     &:hover
-      border-color: $b-40
+      border-color: $gray
 
     &--borderless
       border: none
       color: $gray--light
 
   &.gray--lighter
-    border-color: $b-20
+    border-color: $gray--lighter
     color: $gray--lighter
 
     &:hover
-      border-color: $b-40
+      border-color: $gray
 
     &--borderless
       border: none
       color: $gray--lighter
 
   &.blue
-    border-color: $b-20
+    border-color: $gray--lighter
     color: $blue
 
     &:hover
-      border-color: $b-40
+      border-color: $gray
 
     &--borderless
       border: none
