--- a/framework/styles/sass/_grid.sass
+++ b/framework/styles/sass/_grid.sass
@@ -24,7 +24,7 @@
 
 .content
   width: 100%
-  border: 1px solid $b-20
+  border: 1px solid $gray--lighter
   background-color: $w
 
   +min-width(960px)
