--- a/framework/styles/sass/_icons.sass
+++ b/framework/styles/sass/_icons.sass
@@ -37,8 +37,28 @@ $icons: add \f1a2, address \f139, admin-support \f1d7, admin \f1ae, align-center
 
 .ez-star
   &:before
-    content: "\e601"
+    content: "\e605"
 
   &--half
     &:after
-      content: "\e600"
+      content: "\e604"
+
+.ez-chevron-up:before
+  content: "\e600"
+
+.ez-chevron-right:before
+  content: "\e601"
+
+.ez-chevron-left:before
+  content: "\e602"
+
+.ez-chevron-down:before
+  content: "\e603"
+
+.ez-menu:before
+  content: "\e606"
+  font-size: 24px
+
+.ez-close:before
+  content: "\e607"
+  font-size: 24px
