--- a/framework/styles/sass/_variables.sass
+++ b/framework/styles/sass/_variables.sass
@@ -7,11 +7,13 @@ $global-width: 1280px
  * PAGE HEADERS
 /*-------------------------*/
 $header-short: 27.45%
-$header-tall: 35%
+$header-tall: 50%
+$header-splash: 100%
 
 /*-------------------------*\
  * TABS
 /*-------------------------*/
-$max-number-of-tabs: 8
+$max-number-of-tabs: 4
+
 $tab-height: 55px
 $tab-modifier: 2px
