--- a/framework/styles/sass/_animations.sass
+++ b/framework/styles/sass/_animations.sass
@@ -3,4 +3,4 @@
 
 .easeToActive
   +transition(transform 750ms cubic-bezier(0,1,0,1))
-  +box-shadow(0 0 20px $b-20)
+  +box-shadow(0 0 20px $gray--lighter)
