--- a/framework/styles/sass/_mixins.sass
+++ b/framework/styles/sass/_mixins.sass
@@ -50,18 +50,9 @@
   +box-shadow(0 1px 2px 0 $b-05,0 4px 8px 0 $b-10)
 
 /*-------------------------*\
- * COVERS
-/*-------------------------*/
-=cover($height)
-  position: relative
-  min-height: 300px
-  height: $height
-  +transition(height 333ms)
-
-/*-------------------------*\
  * APP CARD ICON
 /*-------------------------*/
-=app-card-icon($bg-color: $w)
+=app-card-icon($bg-color: $gray--lightest)
   position: absolute
   top: 0
   left: 0
@@ -74,6 +65,15 @@
   background-repeat: no-repeat
   background-color: $bg-color
   overflow: hidden
+
+/*-------------------------*\
+ * COVERS
+/*-------------------------*/
+=cover($height)
+  position: relative
+  min-height: 300px
+  height: $height
+  +transition(height 610ms cubic-bezier(0,.8,0,1))
 
 /*-------------------------*\
  * BACKGROUND COVERS
@@ -113,11 +113,8 @@
   +min-width(960px)
     font-size: $font-size * 1.278
 
-=bg-subtitle($top: 60%, $color: null, $font-size: 18px)
-  position: absolute
-  top: $top
-  width: 100%
-  +translateY(-50%)
+=bg-subtitle($color: null, $font-size: 18px)
+  display: block
   color: $color
   font-size: $font-size
   text-align: center
