--- a/framework/styles/sass/_modals.sass
+++ b/framework/styles/sass/_modals.sass
@@ -24,7 +24,8 @@
     position: fixed
     top: 50%
     left: 50%
-    width: 620px
+    width: 100%
+    max-width: 620px
     height: 100%
     +box-shadow(0 0 20px $b-20)
     background-color: $gray--lightest
@@ -34,7 +35,7 @@
     overflow: hidden
     z-index: 10
     +translate(-50%, -40%)
-    +transition(opacity 233ms, transform 610ms cubic-bezier(0,.8,0,1), visibility 233ms)
+    +transition(opacity 610ms, transform 610ms cubic-bezier(0,.8,0,1), visibility 610ms)
 
     &:first-of-type
       +translate(-50%, -48%)
